# spirit

./: .clang-format  .gitignore  CMakeLists.txt
assets/shaders/basic/: basic.frag  basic.vert  frag.frag  vert.vert
inc/bundler/: bundler.h
inc/engine/: app.h  utility.h
inc/engine/assets/: drawable.h  loaders.h  manager.h  material.h  mesh.h  model.h  texture.h
inc/engine/assets/loaders/: obj.h  png.h
inc/engine/graphics/: ebo.h  shader.h  vao.h  vbo.h
inc/engine/input/: keyboard.h  mouse.h
inc/engine/objects/: object.h
inc/engine/objects/components/: camera.h  component.h  light.h  mesh_renderer.h  transform.h
inc/engine/types/: vector.h
inc/game/: camera_controller.h  rotator_component.h
inc/glad/: glad.h
src/: main.cpp
src/bundler/: bundler.cpp  bundler.sh
src/engine/: app.cpp  utility.cpp
src/engine/assets/: manager.cpp  material.cpp  mesh.cpp  model.cpp  texture.cpp
src/engine/assets/loaders/: obj.cpp  png.cpp
src/engine/graphics/: ebo.cpp  shader.cpp  vao.cpp  vbo.cpp
src/engine/input/: keyboard.cpp  mouse.cpp
src/engine/objects/: object.cpp
src/engine/objects/components/: camera.cpp  component.cpp  light.cpp  mesh_renderer.cpp  transform.cpp
src/game/: camera_controller.cpp  main.cpp  rotator_component.cpp
src/glad/: glad.c
